# atomistic_simulation

./: .gitignore  Readme.MD
ASE/: Melting.py  Readme.MD  create_crystal.py  experimentos_ASE.ipynb  interface_lj_mc.py  lj_mc.py  main_lj_mc.py  md_message_pass.py  md_para.py  md_para_ase.py  param_md_para.py  run.qsub
ASE/fft_ex/: fft_veloc.py
ASE/lammps/: generate_crystal.sh
ASE/lammps/UZr/: .gitignore  lammps_pd.ipynb
ASE/lammps/UZr/AlExample1/: UZr.meam  base.data
ASE/lammps/UZr/Ej01/: in.UZr  in.minimo  run.qsub
ASE/lammps/UZr/EquilibrationNpt/: in.eam  run.qsub
ASE/lammps/UZr/Intersticios/: in.meam  run.qsub
ASE/lammps/UZr/Tutorial1/: Readme.md  bcc.data  fcc22.data  in.meam  log.lammps
ASE/lammps/UZr/Tutorial2/: in.meam  library.meam  log.lammps
ASE/lammps/UZr/Tutorial3/: in.eam  meafile  run.qsub
ASE/lammps/UZr/Vacancias/: in.meam
ASE/lammps/UZr/Vacancias2/: in.meam  meamf
ASE/lammps/UZr/equilibraPy/: equilibra.py  potentials.py  qsub.py  requirements.txt  run_remote.py
ASE/lammps/UZr/equilibraPy/cluster_monitor/: db.sqlite3  manage.py
ASE/lammps/UZr/equilibraPy/cluster_monitor/cluster_monitor/: urls.py
ASE/lammps/UZr/equilibraPy/cluster_monitor/pbs_status/: apps.py  qstat_db.py  tasks.py  urls.py  views.py
ASE/lammps/UZr/equilibraPy/cluster_monitor/pbs_status/templates/pbs_status/: index.html
ASE/lammps/UZr/equilibraPy/libs/: gen_lammps.py  potentials.py  qsub.py
ASE/lammps/UZr/equilibraPy/nptPy/: corridas_t.py  main_npt.py  parametros_t.py  run_multi_t.py
ASE/lammps/UZr/equilibraPy/relax/: Readme.MD  main_relax.py
ASE/lammps/UZr/equilibraPy/relax/cluster_monitor/cluster_monitor/: settings.py  wsgi.py
ASE/lammps/UZr/equilibraPy/relax/cluster_monitor/pbs_status/templates/: index.html
ASE/lammps/UZr/equilibraPy/relax/libs/: gen_runs.py  qsub.py
ASE/lammps/UZr/equilibraPy/relax/nptPy/: create_multi_t.py  main_npt.py
ASE/lammps/UZr/equilibraPy/relax/relax/: parametros_t.py
ASE/lammps/UZr/equilibraPy/relax/relax/relax_calc/: meafile  run.qsub
ASE/lammps/UZr/equilibraPy/relax/relax_calc/: infile_relax  meamf
ASE/lammps/UZr/minimizaPy/: minimization.py  procces_log.py  script_meam_al.py
ASE/libs/: lj_mc.py  lj_mix.py
C/src/: Readme.md  mclj_npt  mclj_npt.c  mclj_widom.c  mdlj_berp  mdlj_berp.c
FORTRAN/DMMulti/: CMakeLists.txt  Makefile  Readme.MD  Readme.md  combinacion.f90  compile.sh  globales.f90  input.par  instalar.sh  main.f90  read_param  read_param.f90
FORTRAN/DMMulti/docs/: parametros_lj.gnumeric
FORTRAN/DMMulti/docs/presentacion/: Makefile
FORTRAN/DMMulti/docs/presentacion/src/: slides.tex
FORTRAN/DMMulti/docs/presentacion/src/src_figs/vid/: conv_ima.sh
FORTRAN/DMMulti/fft_ex/: fftw3_prb.f90  main.f90  test_fftw3.py
FORTRAN/DMMulti/libs/: combinacion.f90  estadistica.f90  fcc.f90  globales.f90  inic_fin.f90  integra.f90  io_parametros.f90  mediciones.f90  modos_vib.f90  optimiza_mpi.f90  read_param.f90  types.f90  utils.f90
FORTRAN/DMMulti/scripts/: analisis_modos.py  combinacion.py  graficos_energia.py  graficos_gr.py  graficos_psd.py  graficos_pyt.py  lennardjones.py  lj_np.py  modos_paralelo.py  modos_qsub.py  param_red.py  qsub.sh  shift_average.py
FORTRAN/DMMulti/src/: CMakeLists.txt  autocorrelaciones.f90  control.h  input.par  input_04.par  input_gas.par  input_sol.par  main.f90  modo_vib.f90
FORTRAN/autoCorrelation/: .gitignore  LICENSE  Makefile  README.md  manual.lyx
FORTRAN/autoCorrelation/src/: main.f90  main.nb
FORTRAN/carlosMontes/: CMakeLists.txt  energia_mc.gnumeric  instalar.sh
FORTRAN/carlosMontes/docs/: informe.tex
FORTRAN/carlosMontes/libs/: CMakeLists.txt  constants.f90  cubic.f90  cubic.py  init.f90  paramMezcla.py  potenciales.f90  read_md.f90  types.f90
FORTRAN/carlosMontes/scripts/: autocorr.py  cubic.py  graph_data.py  lj_mc.py  main_autocorr.py  main_config.py  main_lj_mc.py  paramCorrida.py  paramMezcla.py  param_md_para.py
FORTRAN/carlosMontes/scripts/libs/: cubic.py  lj_mix.py  paramCorrida.py
FORTRAN/carlosMontes/src/: CMakeLists.txt  md_read.f90
FORTRAN/dinmod/: .gitignore  CMakeLists.txt  Readme.md  instalar.sh
FORTRAN/dinmod/docs/: desc_system.tex  informe.tex  resultados.tgz
FORTRAN/dinmod/libs/: CMakeLists.txt  constants.f90  datos_problema.f90  dinmods.f90  estadistica.f90  globales.f90  inic_fin.f90  integra.f90  io_parametros.f90  mc.f90  mediciones.f90  potenciales.f90  procesamiento.f90  types.f90  usozig.f90  utils.f90
FORTRAN/dinmod/scripts/: combinacion.py  corridas.py  corridas_paralelo.py  corridas_paralelo_rho.py  corridas_paralelo_t.py  dinmol_funcs.py  graficos.py  graficos_1D.py  graficos_gr.py  graficos_pyt.py  graficos_tablas_rho.py  graficos_tablas_t.py  graph_data.py  md_para.py  param_md_para.py  parametros_rho.py  parametros_t.py
FORTRAN/dinmod/src/: CMakeLists.txt  control.h  dinmod.f90  mc_pote.f90
FORTRAN/ising/: CMakeLists.txt  Makefile  Readme.md  anima01_corridas.py  anima02_armado.py  corrida_paralelo.py  corridas.py  corridas_paralelo.py  crea_histograma  crea_histograma.f90  estadistica.f90  globals.f90  grafica_histograma  grafica_histograma.f90  graficar.plg  grafico_tablas.py  grafico_temporal.py  io_parametros.f90  ising  ising.f90  ising_fun.py  isingmods.f90  py_graficos.py  strings.f90  usozig.f90
FORTRAN/ising/informe/: .gitignore  desc_system.tex  imgs_temps.tex  informe.tex
FORTRAN/ising/libs/: CMakeLists.txt  estadistica.f90  globales.f90  io_parametros.f90  isingmods.f90  ziggurat.f90
FORTRAN/ising/src/: CMakeLists.txt  anima01_corridas.py  anima02_armado.py  corre_graficos.py  corre_graficos_tamano.py  correlaciones.py  corridas.py  corridas_paralelo.py  grafica_histograma.f90  grafico_tablas.py  grafico_tablas_tamano.py  grafico_temporal.py  ising.f90  ising_fun.py  parametros.py
MATLAB/: param_in.m  simu.m
